fix: updated scrollbar colors

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,21 +80,23 @@
   }
 
   ::-webkit-scrollbar {
-    width: 12px;
+    width: 7px;
+    background: transparent;
   }
+
+  ::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.4);
+  }
+
   ::-webkit-scrollbar-track {
     background: #050a14;
   }
-  ::-webkit-scrollbar-thumb {
-    border: 3px solid #050a14;
-    border-radius: 10px;
-    background: linear-gradient(180deg, #d15902 0%, #a32c00 100%);
-    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(180deg, #ff7b00 0%, #cc3700 100%);
-    box-shadow: 0 0 12px 1px rgba(209, 89, 2, 0.6) inset;
-  }
+
   ::selection {
     background-color: rgba(0, 102, 255, 0.3);
     color: white;
